Project KidGo {
  database_type: "MongoDB"
}

/* ===================== CORE ===================== */

Table User {
  _id        ObjectId [pk]
  phone      string   [unique, not null]
  email      string   [unique, not null]
  password   string   [not null]
  fullName   string   [not null]
  avatar     string
  role       string   // 'parent' | 'driver' | 'admin'
  isVerified boolean
  isActive   boolean
  driverId   ObjectId [ref: > Driver._id]  // Chỉ tồn tại nếu role = 'driver'
  deviceTokens string[] // FCM tokens
  createdAt  datetime
  updatedAt  datetime
}

Table Kid {
  _id              ObjectId [pk]
  parentId         ObjectId [ref: > User._id, not null]
  fullName         string   [not null]
  dateOfBirth      datetime
  avatar           string
  phone            string
  school           string
  notes            string
  isActive         boolean
  securityQuestion string
  securityAnswer   string   // hashed
  createdAt        datetime
}

Table Driver {
  _id                ObjectId [pk]
  user               ObjectId [ref: > User._id, unique, not null] // 1-1 với User
  licenseNumber      string   [unique, not null]
  licenseExpiry      datetime
  status             string   // 'pending' | 'active' | 'suspended' | 'rejected'
  isOnline           boolean
  rideStatus         string   // 'free' | 'driving_to_pickup' | 'waiting_for_kid' | 'in_trip'
  currentLocation    Point    // GeoJSON Point (index: 2dsphere)
  certificationLevel int      // 0–5
  totalTrips         int
  rating             float    // 1–5
  isActive           boolean
  createdAt          datetime
}

Table Vehicle {
  _id              ObjectId [pk]
  driverId         ObjectId [ref: > Driver._id, not null]
  licensePlate     string   [unique, not null]
  brand            string
  model            string
  color            string
  seatCount        int
  inspectionExpiry datetime
  photos           string[]
  isActive         boolean
}

/* ===================== OPERATIONAL ===================== */

Table Route {
  _id               ObjectId [pk]
  parentId          ObjectId [ref: > User._id, not null]
  name              string            // VD: "Đi học sáng"
  pickupAddress     string
  pickupCoords      Point             // GeoJSON Point (index: 2dsphere)
  dropoffAddress    string
  dropoffCoords     Point             // GeoJSON Point (index: 2dsphere)
  waypoints         Point[]           // Array GeoJSON Points
  estimatedDuration int               // phút
  estimatedDistance float             // km
  isDefault         boolean
}

Table Subscription {
  _id           ObjectId [pk]
  parentId      ObjectId [ref: > User._id, not null]
  plan          string   [not null]   // 'monthly' | 'yearly'
  status        string                // 'active' | 'expired' | 'cancelled'
  startDate     datetime [not null]
  endDate       datetime [not null]
  tripsPerMonth int      [not null]
  usedTrips     int
  price         float    [not null]   // VND
  autoRenew     boolean
  createdAt     datetime
}

Table TripSchedule {
  _id               ObjectId [pk]
  parentId          ObjectId [ref: > User._id, not null]
  kidId             ObjectId [ref: > Kid._id, not null]
  preferredDriverId ObjectId [ref: > Driver._id]           // nullable
  routeId           ObjectId [ref: > Route._id, not null]
  subscriptionId    ObjectId [ref: > Subscription._id]     // nullable
  repeatDays        int[]    // [1,2,3,4,5] = Thứ 2–Thứ 6 (0=CN)
  pickupTime        string   // "07:30" (HH:mm)
  isActive          boolean
  startDate         datetime
  endDate           datetime // nullable
}

Table Booking {
  _id               ObjectId [pk]
  parentId          ObjectId [ref: > User._id, not null]
  kidId             ObjectId [ref: > Kid._id, not null]
  routeId           ObjectId [ref: > Route._id, not null]
  scheduleId        ObjectId [ref: > TripSchedule._id]  // null = đặt thủ công
  preferredDriverId ObjectId [ref: > Driver._id]        // nullable
  assignedDriverId  ObjectId [ref: > Driver._id]        // nullable, set khi matched
  status            string   // 'pending' | 'matched' | 'confirmed' | 'cancelled'
  scheduledTime     datetime [not null]
  type              string   // 'one_time' | 'recurring'
  createdAt         datetime
}

Table Trip {
  _id                  ObjectId [pk]
  bookingId            ObjectId [ref: > Booking._id, not null]
  driverId             ObjectId [ref: > Driver._id, not null]
  kidId                ObjectId [ref: > Kid._id, not null]
  parentId             ObjectId [ref: > User._id, not null]
  vehicleId            ObjectId [ref: > Vehicle._id, not null]
  status               string   // 'picking_up' | 'in_progress' | 'completed' | 'cancelled'
  plannedRoute         PlannedRoute // Embedded sub-schema
  // actualRoute đã loại bỏ — dùng LocationLog làm Single Source of Truth
  scheduledPickupTime  datetime
  actualPickupTime     datetime
  scheduledDropoffTime datetime
  actualDropoffTime    datetime
  pickupPhoto          string
  dropoffPhoto         string
  otpVerified          boolean  // true sau khi tài xế nhập đúng OTP
  distance             float    // km thực tế
  createdAt            datetime
}

/* ===================== SAFETY & LOGS ===================== */

Table LocationLog {
  _id        ObjectId [pk]
  tripId     ObjectId [ref: > Trip._id, not null]  // index
  coords     Point    [not null]                   // GeoJSON Point (index: 2dsphere)
  speed      float    // km/h, tính từ 2 điểm liền kề
  heading    float    // 0–360°
  accuracy   float    // mét
  recordedAt datetime [not null]                   // index
}

// NOTE: LocationLog là nguồn dữ liệu GPS DUY NHẤT trong chuyến xe.
// Dùng getCompressedRoute(tripId) để lấy Polyline đã nén (lọc 10m) từ collection này.

Table Alert {
  _id        ObjectId [pk]
  tripId     ObjectId [ref: > Trip._id, not null]
  driverId   ObjectId [ref: > Driver._id, not null]
  parentId   ObjectId [ref: > User._id, not null]
  type       string   // 'detour' | 'unplanned_stop' | 'speed' | 'gps_lost' | 'early_end' | 'major_detour'
  level      string   // 'info' | 'warning' | 'critical'
  status     string   // 'open' | 'acknowledged' | 'resolved' | 'escalated'
  detectedAt datetime
  resolvedAt datetime
  resolvedBy string   // 'parent' | 'driver' | 'admin' | 'system'
  location   Point    // GeoJSON Point (index: 2dsphere)
  metadata   json     // Mixed: { deviation_meters, stop_duration, speed_kmh, ... }
  note       string
}

Table Confirmation {
  _id                 ObjectId [pk]
  tripId              ObjectId [ref: > Trip._id, not null]
  type                string   [not null] // 'pickup' | 'dropoff'
  photoUrl            string
  pinEntered          string   // hash của OTP nhập vào
  pinVerified         boolean
  confirmedAt         datetime
  confirmedByDriverId ObjectId [ref: > Driver._id]
  location            Point    // GeoJSON Point (index: 2dsphere)
}

/* ===================== SUPPORT ===================== */

Table Review {
  _id       ObjectId [pk]
  tripId    ObjectId [ref: > Trip._id, unique, not null]
  parentId  ObjectId [ref: > User._id, not null]
  driverId  ObjectId [ref: > Driver._id, not null]
  rating    int      // 1–5, required
  comment   string
  tags      string[] // 'safe_driving' | 'punctual' | 'friendly' ...
  createdAt datetime
}

Table Notification {
  _id           ObjectId [pk]
  recipientId   ObjectId [not null]             // ID của User/Driver
  recipientType string   [not null]             // 'parent' | 'driver' | 'admin'
  type          string                          // 'trip_start' | 'alert' | 'booking_confirm'...
  title         string
  body          string
  channel       string                          // 'push' | 'sms' | 'call'
  status        string                          // 'sent' | 'delivered' | 'failed'
  refId         ObjectId                        // ID của Trip/Alert liên quan (polymorphic)
  createdAt     datetime                        // index: desc
}

Table PreferredDriver {
  _id       ObjectId [pk]
  parentId  ObjectId [ref: > User._id, not null]
  driverId  ObjectId [ref: > Driver._id, not null]
  nickname  string
  priority  int      // 1 = ưu tiên cao nhất
  addedAt   datetime
}

Table DriverCertification {
  _id           ObjectId [pk]
  driverId      ObjectId [ref: > Driver._id, not null]
  previousLevel int
  newLevel      int
  reason        string
  changedAt     datetime
  changedBy     string   // 'system' | 'admin'
}

/* ===================== SUB-SCHEMAS (for reference) ===================== */

/*
Type Point {
  type        string    // Always 'Point'
  coordinates number[]  // [longitude, latitude]
}

Type PlannedRoute {
  pickupAddress      string
  pickupCoords       Point
  dropoffAddress     string
  dropoffCoords      Point
  waypoints          Point[]
  estimatedDuration  int     // phút
  estimatedDistance  float   // km
}
*/
